pizza calculator afgemaakt

--- a/pizzacaclulator.html
+++ b/pizzacaclulator.html
@@ -8,5 +8,8 @@
 <body> 
   <h1>pizzacalculator</h1> 
   <script src="pizzacalculator.js"></script>
+   <head>
+  <link rel="stylesheet" type="text/css" href="theme.css">
+</head>
  </body>
 </html>
