--- a/pizzacaclulator.html
+++ b/pizzacaclulator.html
@@ -8,8 +8,7 @@
 <body> 
   <h1>pizzacalculator</h1> 
   <script src="pizzacalculator.js"></script>
-   <head>
-  <link rel="stylesheet" type="text/css" href="theme.css">
-</head>
+  <link rel="stylesheet" type="text/css" href="pizzacalculator.css">
+
  </body>
 </html>
